# geodb

./: .gitignore  Cargo.toml  HISTORY.md  LICENSE  README.md  build.rs
.github/workflows/: linux.yml  macos.yml  windows.yml
benches/: bench.rs
codegen/: build.rs  continent.rs  country.rs  currency.rs  language.rs  subdivision.rs
csv/: language.csv
datasets/: country-code.csv  country.csv  currency.csv  language.csv  subdivision.csv
datasets/datahub/: country-codes.csv
res/: continent.csv  country.csv  language.csv  subdivision.csv
src/: continent.rs  country.rs  currency.rs  language.rs  lib.rs  subdivision.rs  timezone.rs
src/country/: country_code.rs  mod.rs
