[package]
name = "geodb"
version = "0.1.0"
edition = "2021"
authors = ["Jian Chen <admin@chensoft.com>"]
license = "MIT"
description = "Comprehensive geographical information"
documentation = "https://docs.rs/geodb"
repository = "https://github.com/chensoft/geodb"
readme = "README.md"
keywords = ["iso3166-1", "iso3166-2", "iso4217", "bcp47"]
build = "codegen/build.rs"

[features]
build = []

[build-dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
indexmap = { version = "2.7", features = ["serde"] }
handlebars = "6.2"
serde_json = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }